--- a/_studies/2022-02-26-10.3390-nu14051000.md
+++ b/_studies/2022-02-26-10.3390-nu14051000.md
@@ -1,16 +1,16 @@
 ---
 date:          2022-02-26
 title:         Nutrients
-authors:       'Motti, ML, Tafuri, D, Donini, L, et al.'
+authors:       'Motti, ML, Tafuri, D, Donini, L, et al. '
 status:        default
 en:
   subtitle:    'The Role of Nutrients in Prevention, Treatment and Post-Coronavirus Disease-2019 (COVID-19)'
   description: 'SARS-CoV-2 virus, infecting human cells via its spike protein, causes Coronavirus disease 2019 (COVID-19). COVID-19 is characterized by shortness of breath, fever, and pneumonia and is sometimes fatal. Unfortunately, to date, there is still no definite therapy to treat COVID-19. Therefore, the World Health Organization (WHO) approved only supportive care. During the COVID-19 pandemic, the need to maintain a correct intake of nutrients to support very weakened patients in overcoming disease arose. The literature available on nutrient intake for COVID-19 is mainly focused on prevention. However, the safe intake of micro- and/or macro-nutrients can be useful either for preventing infection and supporting the immune response during COVID-19, as well as in the post-acute phase, i.e., “long COVID”, that is sometimes characterized by the onset of various long lasting and disabling symptoms. The aim of this review is to focus on the role of nutrient intake during all the different phases of the disease, including prevention, the acute phase, and finally long COVID. '
-  tags:        [pandemic, nutritional supplement, Long-COVID, ARDS, inflammation, immune system]
+  tags:        [nutritional supplement, Long-COVID, ARDS, inflammation, immune system]
 de:
   subtitle:    'Die Rolle von Nährstoffen bei Prävention, Behandlung und Post-Coronavirus-Erkrankungen-2019 (COVID-19'
-  description: 'Das SARS-CoV-2-Virus, das menschliche Zellen über sein Spike-Protein infiziert, verursacht die Coronavirus-Krankheit 2019 (COVID-19). COVID-19 ist gekennzeichnet durch Kurzatmigkeit, Fieber und Lungenentzündung und verläuft manchmal tödlich. Leider gibt es bis heute noch keine eindeutige Therapie zur Behandlung von COVID-19. Daher hat die Weltgesundheitsorganisation (WHO) nur eine unterstützende Behandlung zugelassen. Während der COVID-19-Pandemie ergab sich die Notwendigkeit, eine korrekte Nährstoffzufuhr aufrechtzuerhalten, um die sehr geschwächten Patienten bei der Überwindung der Krankheit zu unterstützen. Die verfügbare Literatur zur Nährstoffzufuhr bei COVID-19 konzentriert sich hauptsächlich auf die Prävention. Die sichere Zufuhr von Mikro- und/oder Makronährstoffen kann jedoch sowohl zur Prävention von Infektionen und zur Unterstützung der Immunreaktion während COVID-19 als auch in der postakuten Phase, d. h. der "langen COVID", nützlich sein, die manchmal durch das Auftreten verschiedener lang anhaltender und behindernder Symptome gekennzeichnet ist. Ziel dieser Übersichtsarbeit ist es, sich auf die Rolle der Nährstoffzufuhr in den verschiedenen Phasen der Krankheit zu konzentrieren, einschließlich der Prävention, der akuten Phase und schließlich von Long-COVID. ' 
-  tags:        [Pandemie, Nahrungsergänzung, Long-COVID, ARDS, Entzündung, Immunsystem]
+  description: 'Das SARS-CoV-2-Virus, das menschliche Zellen über sein Spike-Protein infiziert, verursacht die Coronavirus-Krankheit 2019 (COVID-19). COVID-19 ist gekennzeichnet durch Kurzatmigkeit, Fieber und Lungenentzündung und verläuft manchmal tödlich. Leider gibt es bis heute noch keine eindeutige Therapie zur Behandlung von COVID-19. Daher hat die Weltgesundheitsorganisation (WHO) nur eine unterstützende Behandlung zugelassen. Während der COVID-19-Pandemie ergab sich die Notwendigkeit, eine korrekte Nährstoffzufuhr aufrechtzuerhalten, um die sehr geschwächten Patienten bei der Überwindung der Krankheit zu unterstützen. Die verfügbare Literatur zur Nährstoffzufuhr bei COVID-19 konzentriert sich hauptsächlich auf die Prävention. Die sichere Zufuhr von Mikro- und/oder Makronährstoffen kann jedoch sowohl zur Prävention von Infektionen und zur Unterstützung der Immunreaktion während COVID-19 als auch in der postakuten Phase, d. h. des "Long-COVID", nützlich sein, die manchmal durch das Auftreten verschiedener lang anhaltender und behindernder Symptome gekennzeichnet ist. Ziel dieser Übersichtsarbeit ist es, sich auf die Rolle der Nährstoffzufuhr in den verschiedenen Phasen der Krankheit zu konzentrieren, einschließlich der Prävention, der akuten Phase und schließlich der langen COVID.' 
+  tags:        [Nahrungsergänzung, Langzeit-COVID, ARDS, Entzündung, Immunsystem]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu14051000
 ---
