--- a/_studies/2021-08-04-10.1001-jama.2021.13443.md
+++ b/_studies/2021-08-04-10.1001-jama.2021.13443.md
@@ -2,13 +2,13 @@
 date:          2021-08-04
 title:         JAMA
 authors:       'Diaz, MDGA, Parsons, GT, Gering, SK, et al.'
-status:        Research Letter
+status:        default
 en:
-  subtitle:    'Myocarditis and Pericarditis After Vaccination for COVID-19'
+  subtitle:    'Research Letter: Myocarditis and Pericarditis After Vaccination for COVID-19'
   description: 'Rare cases of cardiac inflammation following SARS-CoV-2 vaccination have been reported. We reviewed the clinical records of vaccine recipients to identify cases of postvaccination myocarditis or pericarditis. … Discussion: Two distinct self-limited syndromes, myocarditis and pericarditis, were observed after COVID-19 vaccination. Myocarditis developed rapidly in younger patients, mostly after the second vaccination. Pericarditis affected older patients later, after either the first or second dose. Some vaccines are associated with myocarditis, including mRNA vaccines, and the Centers for Disease Control and Prevention recently reported a possible association between COVID-19 mRNA vaccines and myocarditis, primarily in younger male individuals within a few days after the second vaccination, at an incidence of about 4.8 cases per 1 million. This study shows a similar pattern, although at higher incidence, suggesting vaccine adverse event underreporting. Additionally, pericarditis may be more common than myocarditis among older patients. Study limitations include cases missed in outside care settings and missed diagnoses of myocarditis or pericarditis (which would underestimate the incidence), as well as inaccurate EMR vaccination information. Temporal association does not prove causation, although the short span between vaccination and myocarditis onset and the elevated incidence of myocarditis and pericarditis in the study hospitals lend support to a possible relationship.'
   tags:        [COVID-19, SARS-CoV-2, Myocarditis, Pericarditis, BNT162b2, mRNA-1273, Ad26.COV2.S]
 de:
-  subtitle:    'Myokarditis und Perikarditis nach Impfung gegen COVID-19'
+  subtitle:    'Forschungsbrief: Myokarditis und Perikarditis nach Impfung gegen COVID-19'
   description: 'Der weltweite Kampf gegen die Coronavirus-Pandemie 2019 (COVID-19) ist in die Phase der Massenimpfung eingetreten. Israel hatte einen frühen Start1 und ≈90 % der erwachsenen Bevölkerung erhielten den BioNTech COVID-19-Impfstoff (Pfizer). Die frühe Impfphase betraf die ältere Bevölkerung, doch am 26. Januar wurde die Mindestaltersgrenze auf ≥16 Jahre gesenkt. Kurz darauf, zwischen Februar und April 2021, wurde eine Gruppe von 8 Patienten mit Verdacht auf Myokarditis in unserer örtlichen Notaufnahme vorstellig, nachdem sie die zweite Dosis des Impfstoffs BioNTech COVID-19 (Pfizer) erhalten hatten. Die Studie wurde von unserem Institutional Review Board genehmigt. Die Daten, die die Ergebnisse dieser Studie untermauern, sind auf begründete Anfrage beim entsprechenden Autor erhältlich. … Frühere Berichte deuteten auf einen möglichen Zusammenhang zwischen dem COVID-19-Impfstoff und Myokarditis hin. Wir stellen eine Gruppe mit nahezu identischen klinischen, labortechnischen und bildgebenden Befunden vor, die zeitlich eindeutig mit dem Datum der zweiten BioNTech-Impfung zusammenhängen. Dennoch gibt es in der Geschichte keinen Präzedenzfall für diese Massenimpfung, und eine zufällige Häufung von Myokarditis ohne Zusammenhang kann nicht ausgeschlossen werden. Schließlich deuten unsere Ergebnisse darauf hin, dass trotz dieser potenziellen impfstoffbedingten Komplikation die meisten Patienten einen gutartigen Krankheitsverlauf und hohe Heilungsraten aufweisen werden.' 
   tags:        [SARS-CoV-2, Myocarditis, Pericarditis, BNT162b2, mRNA-1273, Ad26.COV2.S]
 group:         'Vaccines'
