--- a/_studies/2022-02-25-10.1001-jamapediatrics.2022.0101.md
+++ b/_studies/2022-02-25-10.1001-jamapediatrics.2022.0101.md
@@ -2,13 +2,13 @@
 date:          2022-02-25
 title:         JAMA
 authors:       'Li, X, Tsz Tsun Lai, F, Chua, GT, et al.'
-status:        Research Letter
+status:        default
 en:
-  subtitle:    'Myocarditis Following COVID-19 BNT162b2 Vaccination Among Adolescents in Hong Kong'
+  subtitle:    'Research Letter: Myocarditis Following COVID-19 BNT162b2 Vaccination Among Adolescents in Hong Kong'
   description: 'Cases of myocarditis following the second dose of messenger RNA (mRNA) vaccine are accruing worldwide, especially in younger male adults and adolescents. In weighing the risk of myocarditis against the benefit of preventing severe COVID-19, Norway, the UK, and Taiwan have suspended the second dose of mRNA vaccine for adolescents. Similarly, adolescents (aged 12-17 years) in Hong Kong have been recommended to receive 1 dose of BNT162b2 instead of 2 doses 21 days apart since September 15, 2021.'
   tags:        [COVID-19, SARS-CoV-2, Myokarditis, BNT162b2]
 de:
-  subtitle:    'Myokarditis nach COVID-19 BNT162b2-Impfung bei Jugendlichen in Hongkong'
+  subtitle:    'Forschungsbrief: Myokarditis nach COVID-19 BNT162b2-Impfung bei Jugendlichen in Hongkong'
   description: 'Weltweit häufen sich Fälle von Myokarditis nach der zweiten Dosis des Boten-RNA-Impfstoffs (mRNA), insbesondere bei jüngeren männlichen Erwachsenen und Jugendlichen. In Abwägung des Risikos einer Myokarditis gegenüber dem Nutzen der Verhinderung einer schweren COVID-19-Erkrankung haben Norwegen, das Vereinigte Königreich und Taiwan die zweite Dosis des mRNA-Impfstoffs für Jugendliche ausgesetzt. Ebenso wird Jugendlichen (im Alter von 12 bis 17 Jahren) in Hongkong seit dem 15. September 2021 empfohlen, eine Dosis BNT162b2 anstelle von zwei Dosen im Abstand von 21 Tagen zu erhalten.' 
   tags:        [SARS-CoV-2, Myokarditis, BNT162b2]
 group:         'Vaccines'
