--- a/_studies/2022-01-21-10.1016_j.nantod.2022.101403.md
+++ b/_studies/2022-01-21-10.1016_j.nantod.2022.101403.md
@@ -2,7 +2,7 @@
 date:          2022-01-21
 title:         Nano Today
 authors:       'Papi, M, Pozzi, D, Palmieri, V, et al.'
-status:        Peer Reviewed
+status:        default
 en:
   subtitle:    'Principles for optimization and validation of mRNA lipid nanoparticle vaccines against COVID-19 using 3D bioprinting'
   description: 'BioNTech/Pfizer’s Comirnaty and Moderna’s SpikeVax vaccines consist in mRNA encapsulated in lipid nanoparticles (LNPs). The modularity of the delivery platform and the manufacturing possibilities provided by microfluidics let them look like an instant success, but they are the product of decades of intense research. There is a multitude of considerations to be made when designing an optimal mRNA-LNPs vaccine. Herein, we provide a brief overview of what is presently known and what still requires investigation to optimize mRNA LNPs vaccines. Lastly, we give our perspective on the engineering of 3D bioprinted validation systems that will allow faster, cheaper, and more predictive vaccine testing in the future compared with animal models.'
