--- a/_studies/2022-01-27-10.1007_s10072-021-05839-2.md
+++ b/_studies/2022-01-27-10.1007_s10072-021-05839-2.md
@@ -2,7 +2,7 @@
 date:          2022-01-27
 title:         Neurological Sciences
 authors:       'Lochner, P, Fousse, M, Goi Junior, JR et al.'
-status:        Peer Reviewed
+status:        default
 en:
   subtitle:    'Rare cerebral vein thrombosis and COVID-19 vaccine: the role of orbit ultrasound'
   description: 'Vaccine-induced immune thrombotic thrombocytopenia (VITT) and cerebral venous sinus thrombosis (CVST) after viral vector vaccines (ChAdOx1 nCoV-19 vaccine, Ad26.COV2 vaccine) are a rare occurrence for which there is an emerging evidence base [1]. Here, we present a case of CVST without VITT after vaccination with ChAdOx1 nCoV-19 vaccine (AstraZeneca) and discuss the non-invasive diagnostics used to confirm the case.'
