--- a/_studies/2021-09-13-10.1016-S0140-6736(21)02046-8.md
+++ b/_studies/2021-09-13-10.1016-S0140-6736(21)02046-8.md
@@ -2,13 +2,13 @@
 date:          2021-09-13
 title:         The Lancet
 authors:       'Krause, PR, B, Fleming, TR, Peto, R, et al.'
-status:        Viewpoint
+status:        default
 en:
-  subtitle:    'Considerations in boosting COVID-19 vaccine immune responses'
+  subtitle:    'Viewpoint: Considerations in boosting COVID-19 vaccine immune responses'
   description: 'A new wave of COVID-19 cases caused by the highly transmissible delta variant is exacerbating the worldwide public health crisis, and has led to consideration of the potential need for, and optimal timing of, booster doses for vaccinated populations. Although the idea of further reducing the number of COVID-19 cases by enhancing immunity in vaccinated people is appealing, any decision to do so should be evidence-based and consider the benefits and risks for individuals and society. COVID-19 vaccines continue to be effective against severe disease, including that caused by the delta variant. Most of the observational studies on which this conclusion is based are, however, preliminary and difficult to interpret precisely due to potential confounding and selective reporting. Careful and public scrutiny of the evolving data will be needed to assure that decisions about boosting are informed by reliable science more than by politics. Even if boosting were eventually shown to decrease the medium-term risk of serious disease, current vaccine supplies could save more lives if used in previously unvaccinated populations than if used as boosters in vaccinated populations. … The vaccines that are currently available are safe, effective, and save lives. The limited supply of these vaccines will save the most lives if made available to people who are at appreciable risk of serious disease and have not yet received any vaccine. Even if some gain can ultimately be obtained from boosting, it will not outweigh the benefits of providing initial protection to the unvaccinated. If vaccines are deployed where they would do the most good, they could hasten the end of the pandemic by inhibiting further evolution of variants. Indeed, WHO has called for a moratorium on boosting until the benefits of primary vaccination have been made available to more people around the world. This is a compelling issue, particularly as the currently available evidence does not show the need for widespread use of booster vaccination in populations that have received an effective primary vaccination regimen.'
   tags:        [COVID-19, SARS-CoV-2]
 de:
-  subtitle:    'Überlegungen zur Verstärkung der Immunantwort auf den COVID-19-Impfstoff'
+  subtitle:    'Standpunkt: Überlegungen zur Verstärkung der Immunantwort auf den COVID-19-Impfstoff'
   description: 'Eine neue Welle von COVID-19-Fällen, die durch die hochgradig übertragbare Delta-Variante verursacht werden, verschärft die weltweite Krise der öffentlichen Gesundheit und hat zu Überlegungen über die mögliche Notwendigkeit und den optimalen Zeitpunkt von Auffrischungsimpfungen für geimpfte Bevölkerungsgruppen geführt. Obwohl der Gedanke, die Zahl der COVID-19-Fälle durch eine Verstärkung der Immunität bei geimpften Personen weiter zu verringern, verlockend ist, sollte jede Entscheidung in dieser Richtung auf Fakten beruhen und die Vorteile und Risiken für den Einzelnen und die Gesellschaft berücksichtigen. COVID-19-Impfstoffe sind nach wie vor wirksam gegen schwere Erkrankungen, auch gegen die durch die Delta-Variante verursachte. Die meisten Beobachtungsstudien, auf die sich diese Schlussfolgerung stützt, sind jedoch vorläufig und aufgrund möglicher Verwechslungen und selektiver Berichterstattung schwer genau zu interpretieren. Eine sorgfältige und öffentliche Prüfung der sich entwickelnden Daten ist erforderlich, um sicherzustellen, dass Entscheidungen über das Boosting eher auf zuverlässigen wissenschaftlichen Erkenntnissen als auf politischen Erwägungen beruhen. Selbst wenn die Auffrischungsimpfung nachweislich das mittelfristige Risiko einer schweren Erkrankung verringert, könnten die derzeitigen Impfstoffvorräte mehr Leben retten, wenn sie in zuvor ungeimpften Bevölkerungsgruppen eingesetzt werden, als wenn sie als Auffrischungsimpfung in geimpften Bevölkerungsgruppen verwendet werden. … Die derzeit verfügbaren Impfstoffe sind sicher, wirksam und retten Leben. Der begrenzte Vorrat an diesen Impfstoffen wird am meisten Leben retten, wenn er Menschen zur Verfügung gestellt wird, die ein nennenswertes Risiko für eine schwere Krankheit haben und noch keinen Impfstoff erhalten haben. Selbst wenn ein gewisser Nutzen aus der Auffrischung gezogen werden kann, überwiegt dieser nicht die Vorteile eines Erstschutzes für die Ungeimpften. Wenn die Impfstoffe dort eingesetzt werden, wo sie den größten Nutzen bringen, könnten sie das Ende der Pandemie beschleunigen, indem sie die weitere Entwicklung von Varianten verhindern. In der Tat hat die WHO ein Moratorium für die Auffrischungsimpfung gefordert, bis die Vorteile der Erstimpfung mehr Menschen auf der ganzen Welt zugänglich gemacht wurden. Dies ist ein zwingendes Anliegen, zumal die derzeit verfügbaren Erkenntnisse nicht belegen, dass eine Auffrischungsimpfung in Bevölkerungsgruppen, die eine wirksame Erstimpfung erhalten haben, in großem Umfang erforderlich ist.' 
   tags:        [SARS-CoV-2]
 group:         'Vaccines'
