--- a/_studies/2021-10-26-10.1038_s41421-021-00329-3.md
+++ b/_studies/2021-10-26-10.1038_s41421-021-00329-3.md
@@ -2,7 +2,7 @@
 date:          2021-10-26
 title:         Cell Discovery
 authors:       'Liu, J, Wang, J, Xu, J, et al.'
-status:        Peer Reviewed
+status:        default
 en:
   subtitle:    'Comprehensive investigations revealed consistent pathophysiological alterations after vaccination with COVID-19 vaccines'
   description: 'Large-scale COVID-19 vaccinations are currently underway in many countries in response to the COVID-19 pandemic. Here, we report, besides generation of neutralizing antibodies, consistent alterations in hemoglobin A1c, serum sodium and potassium levels, coagulation profiles, and renal functions in healthy volunteers after vaccination with an inactivated SARS-CoV-2 vaccine. Similar changes had also been reported in COVID-19 patients, suggesting that vaccination mimicked an infection. Single-cell mRNA sequencing (scRNA-seq) of peripheral blood mononuclear cells (PBMCs) before and 28 days after the first inoculation also revealed consistent alterations in gene expression of many different immune cell types. Reduction of CD8+ T cells and increase in classic monocyte contents were exemplary. Moreover, scRNA-seq revealed increased NF-κB signaling and reduced type I interferon responses, which were confirmed by biological assays and also had been reported to occur after SARS-CoV-2 infection with aggravating symptoms. Altogether, our study recommends additional caution when vaccinating people with pre-existing clinical conditions, including diabetes, electrolyte imbalances, renal dysfunction, and coagulation disorders.'
