--- a/_studies/2022-01-15-10.1007_s42000-021-00346-7.md
+++ b/_studies/2022-01-15-10.1007_s42000-021-00346-7.md
@@ -2,7 +2,7 @@
 date:          2022-01-15
 title:         Hormones
 authors:       'Nakaizumi, N, Fukata, S, Akamizu, T'
-status:        Peer Reviewed
+status:        default
 en:
   subtitle:    'Painless thyroiditis following mRNA vaccination for COVID-19'
   description: 'Recently, cases of subacute thyroiditis and Graves’ disease following coronavirus disease 2019 (COVID-19) vaccine immunization have been reported [1,2,3,4]. Herein, we present two cases of painless thyroiditis (PT) after the administration of the mRNA COVID-19 vaccine.'
