--- a/_studies/2022-01-25-10.1016_j.amsu.2022.103293.md
+++ b/_studies/2022-01-25-10.1016_j.amsu.2022.103293.md
@@ -2,7 +2,7 @@
 date:          2022-01-25
 title:         Annals of Medicine and Surgery
 authors:       'Ahmed, SH, Waseem, S, Shaikh, TG, et al.'
-status:        Peer Reviewed
+status:        default
 en:
   subtitle:    'SARS-CoV-2 vaccine-associated-tinnitus: A review'
   description: 'The global vaccination drive against severe acute respiratory syndrome coronavirus-2 is being pursued at a historic pace. Unexpected adverse effects have been reported following vaccination, including thrombotic thrombocytopenia, myocarditis, amongst others. More recently, some cases of tinnitus are reported post-vaccination. According to the Vaccine Adverse Events Reporting System (VAERS), 12,247 cases of coronavirus post-vaccination tinnitus have been reported till September 14, 2021. To the best of our knowledge, this is the first review evaluating any otologic manifestation following vaccine administration and aims to evaluate the potential pathophysiology, clinical approach, and treatment. Although the incidence is infrequent, there is a need to understand the precise mechanisms and treatment for vaccine-associated-tinnitus.'
